; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_xrmoptions.c_config_parse_xresource_options_file.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_xrmoptions.c_config_parse_xresource_options_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONFIG_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @config_parse_xresource_options_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %22

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i32* @xcb_xrm_database_from_file(i8* %8)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %7
  br label %22

13:                                               ; preds = %7
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* @CONFIG_FILE, align 4
  %16 = call i32 @__config_parse_xresource_options(i32* %14, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @CONFIG_FILE, align 4
  %19 = call i32 @__config_parse_xresource_options_dynamic(i32* %17, i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @xcb_xrm_database_free(i32* %20)
  br label %22

22:                                               ; preds = %13, %12, %6
  ret void
}

declare dso_local i32* @xcb_xrm_database_from_file(i8*) #1

declare dso_local i32 @__config_parse_xresource_options(i32*, i32) #1

declare dso_local i32 @__config_parse_xresource_options_dynamic(i32*, i32) #1

declare dso_local i32 @xcb_xrm_database_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
